<resources>
    <string name="app_name">Snake</string>
    <string name="dialog_positive">Restart</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_msg">Game Over!</string>
    <string name="dialog_result">Your final Score: %d</string>
    <string name="button_start">Start</string>
    <string name="action_settings">Settings</string>
    <string name="color_red">red</string>
    <string name="color_yellow">yellow</string>
    <string name="color_green">green</string>
    <string name="color_blue">blue</string>
    <string name="color_gray">gray</string>
    <string name="color_black">black</string>
    <string name="color_white">white</string>
    <string name="settings_game">Game Settings</string>
    <string name="snake_speed">Snake Speed</string>
    <string name="grid_num">Grid Side Length</string>
    <string name="settings_color">Color Settings</string>
    <string name="color_grid">Grid Color</string>
    <string name="color_grid_line">Grid Line Color</string>
    <string name="color_snake">Snake Color</string>
    <string name="color_food">Food Color</string>
    <string name="button_pause">Pause</string>
    <string name="button_resume">Resume</string>
</resources>
