<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/settings_game">
        <EditTextPreference
            android:title="@string/snake_speed"
            android:key="pref_key_snake_speed"
            android:inputType="number"
            android:defaultValue="6"/>
        <EditTextPreference
            android:title="@string/grid_num"
            android:key="pref_key_grid_num"
            android:inputType="number"
            android:defaultValue="15"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_color">
        <ListPreference
            android:title="@string/color_grid"
            android:key="pref_key_color_grid"
            android:entries="@array/array_colors"
            android:entryValues="@array/array_colors_values"
            android:defaultValue="-1"/>
        <ListPreference
            android:title="@string/color_grid_line"
            android:key="pref_key_color_grid_line"
            android:entries="@array/array_colors"
            android:entryValues="@array/array_colors_values"
            android:defaultValue="-7829368"/>
        <ListPreference
            android:title="@string/color_snake"
            android:key="pref_key_color_snake"
            android:entries="@array/array_colors"
            android:entryValues="@array/array_colors_values"
            android:defaultValue="-16776961"/>
        <ListPreference
            android:title="@string/color_food"
            android:key="pref_key_color_food"
            android:entries="@array/array_colors"
            android:entryValues="@array/array_colors_values"
            android:defaultValue="-65536"/>
    </PreferenceCategory>
</PreferenceScreen>